Added file size
Can understand what file object is doing

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,6 +1,6 @@
 @()
 @main("File upload") {
-    <a href="#" id="browseButton">Select files</a>
-    <button id="button">Upload</button>
+    <a href="#" id="fileSelector">Select files</a>
+    <button id="uploadButton">Upload</button>
 
 }
