Renamed files with similar names as the main application
Prevents collisions

--- a/app/views/uploaderIndex.scala.html
+++ b/app/views/uploaderIndex.scala.html
@@ -1,6 +1,5 @@
 @()
-@main("File upload") {
+@uploaderMain("File upload") {
     <a href="#" id="fileSelector">Select files</a>
     <button id="uploadButton">Upload</button>
-
 }
